fixed font on mobile

--- a/styles/Cofee.module.css
+++ b/styles/Cofee.module.css
@@ -7,7 +7,7 @@
   border-radius: 5px;
   border: 1px solid transparent;
   padding: 0.2rem;
-  font-size: 0.2rem;
+  font-size: 10px;
   letter-spacing: 0.6px;
   box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5);
   font-family: cursive;
@@ -30,8 +30,13 @@
 
 .coffeeButtonText {
   margin-left: 15px;
-  font-size: 0.8rem;
+  font-size: 10px;
   vertical-align: middle;
 }
 
 
+@media (max-width: 600px) {
+ .footer div .coffeeButtonText{
+    font-size: 8px!important;
+  }
+}
